version 5.0-SNAPSHOT
date: dd/MM/yyyy
  * Updated e-mail configuration;
  * Added stackTrace info in error response and changed the serialization to JSON format;
  * Add the possibility to filter the commits shown in the History and Validation tabs by performer and
    validator (obviously, history only)
  * Fixed SKOS vocabulary not loaded, if SKOS is used only as model (and not as lexicalization model);
  * Added validation of RDF values (in particular, IRIs and literals) provided as arguments to the services
  * Introduced the possibility to configure the RDF Serializing Exporter (e.g. to inline blank nodes when
    serializing an ontology using Turtle)
  * Updated to Apache Karaf 4.2.1
  * Updated to Eclipse RDF4J 2.4.0 (the change-tracker-sail is still compatible with RDF4J < 2.3.0, and it can
    be also used with Ontotext GraphDB < 8.6; however, this compatibility may not be guaranteed in future 
    Semantic Turkey releases)
  * Bugfixes

version 4.0.2
date: 27/07/2018
  * Fixed a bug that caused an exception when configuring the Template-based Native URI Generator
  * Minor improvement to the configuration of CODA-based URI Generators, in order to accept new, unforeseen
    properties
  * Fixed a bug that didn't remove a UsersGroup from a Project-User binding when the group was deleted

version 4.0.1
date: 26/07/2018
  * Fixed a bug in getTopConcepts when passing a specific broader property and no narrower property

version 4.0
date: 23/07/2018
  * Update to Apache Karaf 4.2.0
  * Update to RDF4J 2.2.4
  * Integrated MAPLE (http://bitbucket.org/art-uniroma2/maple) for supporting alignment processes
  * Implemented support for semi-automatic alignment to local or remote resources on the Web
  * Creation of a Metadata Registry and its related editor
  * Extended support for OWL2
  * Support for management of datatypes
  * automatic creation of an owl:Ontology resource when this is not available