@@ -1,4 +1,4 @@
-package it.uniroma2.art.semanticturkey.extension.extpts.metadatarepository;
+package it.uniroma2.art.semanticturkey.extension.extpts.datasetcatalog;
 
 import it.uniroma2.art.semanticturkey.extension.ExtensionPoint;
 import it.uniroma2.art.semanticturkey.resources.Scope;
@@ -7,7 +7,7 @@ public class MetadataRepositoryConnectorExtensionPoint implements ExtensionPoint
 
 	@Override
 	public Class<?> getInterface() {
-		return MetadataRepositoryConnector.class;
+		return DatasetCatalogConnector.class;
 	}
 
 	@Override
