@@ -1,4 +1,4 @@
-package it.uniroma2.art.semanticturkey.extension.impl.metadatarepository.lov.model;
+package it.uniroma2.art.semanticturkey.extension.impl.datasetcatalog.lov.model;
 
 import java.util.LinkedHashMap;
 import java.util.Map;
