@@ -1,5 +1,7 @@
 version 5.0-SNAPSHOT
 date: dd/MM/yyyy
+  * Added extension point for connecting to dataset catalogs, together with implementations targeting
+  	Linked Open Vocabularies (https://lov.linkeddata.es/dataset/lov/) and the LOD Cloud (https://lod-cloud.net/)
   * Updated e-mail configuration;
   * Added stackTrace info in error response and changed the serialization to JSON format;
   * Add the possibility to filter the commits shown in the History and Validation tabs by performer and
